/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.android.car;

option java_multiple_files = true;

message CarFeatureControlDumpProto {
  // features currently enabled
  repeated string enabled_features = 1;

  // the allowed optional features from RRO
  repeated string default_enabled_features_from_config = 2;

  // features that have been designated as disabled by the VHAL
  repeated string disabled_features_from_vhal = 3;

  // the experimental features that are available to be enabled; not available in user build
  repeated string available_experimental_features = 4;

  // features that have been requested to be enabled, but the execution hasn't finished yet
  repeated string pending_enabled_features = 5;

  // features that have been requested to be disabled, but the execution hasn't finished yet
  repeated string pending_disabled_features = 6;
}
