/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package android.automotive.watchdog;

import "performance_stats.proto";

// Represents the registered client health check information.
message HealthCheckClientInfo {
  enum ClientType {
    CLIENT_TYPE_UNSPECIFIED = 0;
    REGULAR = 1;
    CAR_WATCHDOG_SERVICE = 2;
  }

  enum HealthCheckTimeout {
    HEALTH_CHECK_TIMEOUT_UNSPECIFIED = 0;
    CRITICAL = 1;
    MODERATE = 2;
    NORMAL = 3;
  }

  optional int32 pid = 1;
  optional UserPackageInfo user_package_info = 2;
  optional ClientType client_type = 3;
  optional int64 start_time_millis = 4;
  optional HealthCheckTimeout health_check_timeout = 5;
}
